# sane

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ArchNode.tsx  ArchitectureCanvas.tsx  ContextMenu.tsx  EdgeTooltip.tsx  ExampleEditorModal.tsx  ExampleLibrary.tsx  Palette.tsx  SaveScenarioModal.tsx  Sidebar.tsx  SimulationPanel.tsx
frontend/src/types/: index.ts
frontend/src/utils/: exampleToFlow.ts  flowToExample.ts
sae/: __init__.py  main.py
sae/api/: __init__.py  routes.py  websocket.py
sae/catalog/: definitions.py  registry.py
sae/examples/: __init__.py  async-workers.json  banking-event-driven-cqrs.json  cdn-edge.json  ecommerce-microservices.json  event-driven-kafka.json  load-balancer-basic.json  loader.py  saas-multiregion-ha.json  streaming-data-pipeline.json  web-with-database.json
sae/examples/Mensajería/: async-workers.json
sae/examples/basicos/: 1.json  2.json
sae/models/: __init__.py  canvas.py  elements.py  example.py  simulation.py
sae/simulation/: engine.py
tests/: conftest.py  test_examples.py  test_simulation.py
